--- a/SBL-CRM/Resources/layout/PhotoAddListItem.axml
+++ b/SBL-CRM/Resources/layout/PhotoAddListItem.axml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottomline"
+    android:background="@drawable/bottomline_with_states"
     android:weightSum="100">
     <TextView
         android:text="Text"
